[project]
name = "saeima-votes"
version = "0.1.0"
description = "Explore Saeima members' voting history"
readme = "README.md"
authors = [{ name = "Jēkabs Balodis", email = "signalingpigeon@duck.com" }]
requires-python = ">=3.14"
dependencies = [
  "duckdb>=1.5.4",
  "polars>=1.42.1",
  "streamlit>=1.59.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.13.2",
  "sqlfluff>=3.5.0",
  "tombi>=0.6.17",
  "ty>=0.0.1a21",
  "typer>=0.24.1",
]

[tool.coverage.run]
omit = ["tests/*"]
source = [
  ".",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "D",  # pydocstyle
  "DOC",  # pydoclint
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PL",  # pylint
]
ignore = ["PLR2004", "F821"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "DOC"]

[tool.tombi.files]
exclude = [".venv/**"]

[tool.ty.environment]
python-platform = "linux"
python-version = "3.14"
